Updates demo script to execute with bundled jdk (#3777)
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>
Signed-off-by: Prabhas Kurapati <prabhask@berkeley.edu>